--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
         </div>
     </div>
 
+    <div id="bookmark-context-menu" class="context-menu">
+        <ul>
+            <li id="context-menu-edit">수정</li>
+            <li id="context-menu-delete">삭제</li>
+        </ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html> 
