--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <ul>
             <li id="context-menu-edit">수정</li>
             <li id="context-menu-delete">삭제</li>
+            <li id="context-menu-focus">Focus</li>
         </ul>
     </div>
 
