--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <h2>북마크 목록</h2>
             <div class="search-container">
                 <input type="text" id="bookmark-search-input" placeholder="제목 또는 URL로 검색...">
+                <button id="delete-all-btn" class="danger-btn">전체 삭제</button>
             </div>
             <div id="bookmark-grid" class="bookmark-grid">
                 <!-- 북마크 카드가 여기에 동적으로 추가됩니다. -->
