--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <img id="user-profile-pic" src="" alt="User Profile">
         <div id="user-dropdown" class="dropdown-content">
             <a id="import-bookmarks-btn">Import Bookmarks</a>
+            <div class="dropdown-separator"></div>
+            <a id="delete-all-bookmarks-dropdown" style="color: #dc3545;">Delete All Bookmarks</a>
+            <div class="dropdown-separator"></div>
             <a id="logout-btn">Logout</a>
         </div>
     </div>
@@ -84,7 +87,6 @@
             <h2>북마크 목록</h2>
             <div class="search-container">
                 <input type="text" id="bookmark-search-input" placeholder="제목 또는 URL로 검색...">
-                <button id="delete-all-btn" class="delete-all-button">전체 삭제</button>
             </div>
             <div id="bookmark-grid" class="bookmark-grid">
                 <!-- 북마크 카드가 여기에 동적으로 추가됩니다. -->
